9) dnsmasq: up to 2.73rc4.<br>
10) udpxy: fix work at 3.5.x and more new linux kernels.<br>
11) pppd: do not build ipx support if not enabled in kernel.<br>
12) dhcp6c: do not open a routing socket that's never used.<br>
13) dhcp6c: more compath with new uclibc/glibc.<br>
14) goahead: do not touch HT_LDPC (not support in clients at real world).<br>
15) goahead: allow select VHT_STBC mode for 7610 module.<br>
16) kernel: configs: enable inotify support(now used for dnsmasq for detect hosts/resolv files changed).<br>
17) kernel: ralink_wifi: fix support VHT in apcli mode for MT7612.<br>
18) kernel: ralink_wifi: disable VHT in WEP encryption mode for apcli(more compat with wifi aliance recomendtions).<br>
19) kernel: ralink_wifi: fix kernel api mismatch u(g)id types to u(g)id_t.<br>
20) kernel: ralink_wifi: allow mac address changes.<br>
21) kernel: ralink_wifi: MT7612 fix LastTxRate update.<br>
22) kernel: ralink_wifi: MT76xx anonse 40MHz SGI only if 40MHz BW enabled.<br>
23) kernel: drop bogus check in file_open_root().<br>
24) kernel: mips: dma-default: fix 32-bit fall back to GFP_DMA.<br>
25) kernel: mips: hibernate: flush TLB entries earlier.<br>
26) kernel: mips: bitops.h: Avoid inline asm for constant FLS.<br>
27) kernel: net: gro: should be ECN friendly.<br>
28) kernel: net: gro: should aggregate frames without DF.<br>
29) kernel: net: add address assign type "SET".<br>
30) kernel: ethtool: set addr_assign_type to NET_ADDR_SET when addr is passed on create.<br>
31) kernel: ethtool: consolidate work with ethtool_ops.<br>
32) kernel: ethtool: make .get_dump_data() harder to misuse by drivers.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>