@@ -837,6 +837,7 @@
 30) kernel: ethtool: set addr_assign_type to NET_ADDR_SET when addr is passed on create.<br>
 31) kernel: ethtool: consolidate work with ethtool_ops.<br>
 32) kernel: ethtool: make .get_dump_data() harder to misuse by drivers.<br>
+33) kernel: netfilter: ctnetlink: fix leak in error path of ctnetlink_create_expect.<br>
 <br>
 <br>
 <b>TODO:</b><br>
